fixed z-index issue

--- a/css/mirador.css
+++ b/css/mirador.css
@@ -171,7 +171,7 @@ a {
     background-color: rgba(255,255,255,0.94);
     display: none;
     overflow: hidden;
-    z-index: 4;
+    z-index: 5;
 }
 #bookmark-panel {
   position: absolute;
@@ -180,7 +180,7 @@ a {
   background-color: rgba(255,255,255,0.94);
   display: none;
   overflow: hidden;
-  z-index: 4;
+  z-index: 5;
   right: 0;
   top: 0;
 }
@@ -620,7 +620,7 @@ li.highlight {
   top: 0;
   box-sizing: border-box;
   background-color: rgba(255,255,255,0.9);
-  z-index: 3;
+  z-index: 4;
   width: 45%;
   overflow-y: scroll;
   height: 80%;
@@ -633,7 +633,7 @@ li.highlight {
   left:0;
   right:0;
   height: 130px;
-  z-index: 3;
+  z-index: 4;
   overflow:hidden;
   display: none;
   transition:all 0.3s ease;
@@ -799,7 +799,7 @@ li.highlight {
   position:absolute;
   right:10px;
   top:10px;
-  z-index: 3;
+  z-index: 2;
 }
 .mirador-pan-zoom-controls {
   position: absolute;
@@ -1391,6 +1391,7 @@ div.manifest-info a.mirador-btn.mirador-icon-toc {
   padding-top: 9px;
   height: 34px;
   width: 24px;
+  z-index:4;
 }
 .mirador-viewer a.mirador-icon-image-view, .mirador-viewer a.mirador-icon-thumbs-view, .mirador-viewer a.mirador-icon-metadata-view  {
   background: none;
@@ -1425,131 +1426,3 @@ div.manifest-info a.mirador-btn.mirador-icon-toc {
   /*color: rgb( 146, 145, 145 );*/
   box-sizing: border-box;
 }
-/* jquery-ui css overrides
----------------------------------------------------------------------------- */
-
-  .mirador-viewer .ui-widget {
-    font-family: 'Open Sans', 'Lucida Grande', Verdana, Arial,sans-serif;
-}
-
-.mirador-viewer .ui-dialog {
-  border-radius: 2px;
-  box-shadow:         0px 0px 1px rgba(50, 50, 50, 0.5);
-  -webkit-box-shadow: 0px 0px 1px rgba(50, 50, 50, 0.5);
-  -moz-box-shadow:    0px 0px 1px rgba(50, 50, 50, 0.5);
-}
-
-.mirador-viewer .ui-dialog .ui-dialog-content {
-  padding: 0;
-  overflow:hidden;
-  /*z-index: inherit;*/
-}
-
-.mirador-viewer .ui-dialog .ui-dialog-titlebar {
-  background-color: #f0f0f0;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-  border-bottom: 1px dotted #ccc;
-  padding: .6em .6em;
-  /*z-index: inherit;*/
-}
-
-.ui-dialog .ui-dialog-title {
-  color: #444;
-  font-size: 12px;
-  font-weight: 500;
-  width: 70%;
-}
-
-.mirador-viewer .ui-widget-header {
-  background-image: none;
-  /*background-color: #E5E3DB;*/
-  background-color: #fff;
-  background: #fff none 50% 50%;
-  color: #333;
-}
-
-.mirador-viewer .ui-dialog {
-  padding:0;
-}
-
-.mirador-viewer .ui-dialog.locked {
-  border: 2px solid deepskyblue;
-  box-shadow:         0px 0px 4px rgba(120, 255, 255, .7);
-  -webkit-box-shadow: 0px 0px 4px rgba(120, 255, 255, .7);
-  -moz-box-shadow:    0px 0px 4px rgba(120, 255, 255, .7);
-}
-
-.mirador-viewer .ui-dialog.locked .mirador-widget-statusbar .mirador-icon-lock {
-  background-position: -161px -41px;
-}
-
-.mirador-viewer .ui-dialog.locked .mirador-widget-statusbar .mirador-icon-lock:hover {
-  background-position: -161px -61px;
-}
-
-.mirador-viewer .ui-dialog-titlebar-buttonpane button {
-  border: 0;
-  background: none;
-}
-
-.mirador-viewer .ui-resizable-se {
-  background-position: -64px -224px;
-  bottom: 1px;
-  right: 1px;
-}
-
-.mirador-viewer .ui-dialog-titlebar-maximize,
-.mirador-viewer .ui-dialog-titlebar-minimize,
-.mirador-viewer .ui-dialog-titlebar-collapse,
-.mirador-viewer .ui-dialog-titlebar-restore {
-  border:none;
-  background:none;
-}
-
-.mirador-viewer-dialog-no-title-bar .ui-dialog-titlebar {
-  display: none;
-}
-
-.tooltipster-content {
-  font-family: 'Open Sans', 'Lucida Grande', Verdana, Arial,sans-serif;
-  font-size: 1.2em;
-}
-
-// Animations for use elsewhere.
-.flash {
-  -webkit-animation: flash 5s infinite; /* Safari 4+ */
-  -moz-animation:    flash 5s infinite; /* Fx 5+ */
-  -o-animation:      flash 5s infinite; /* Opera 12+ */
-  animation:         flash 5s infinite;
-  -moz-animation-delay: 1s;
-  -webkit-animation-delay: 1s;
-  -ms-animation-delay: 1s;
-  -o-animation-delay: 1s;
-  animation-delay: 1s;
-}
-@-webkit-keyframes flash {
-  0%, 50%, 100% {
-    opacity: 1;
-}
-
-25%, 75% {
-  opacity: 0;
-
-}
-
-}
-
-@keyframes flash {
-  0%, 50%, 100% {
-    opacity: 1;
-
-}
-
-25%, 75% {
-  opacity: 0;
-
-}
-
-}
-
